Fix: Ensure unique keys and complaintId for voting; reverse chat order; bugfixes